# agent_loop_demo

./: .gitignore  README.md  pyproject.toml
docs/: Python复刻Pi-Roadmap-v1.md
mu/: __init__.py  agent.py  cli.py  dgm_auto.py  environment.py  eval.py  eval_gate.py  events.py  extension.py  model.py  prompts.py  render.py  tools.py
plan/: M2-Textual-Frontend-plan.md  M3-Self-extension-plan.md  M4.0-Eval-DGM-lite-plan.md  M4.4-Auto-DGM-Candidate-Generation-plan.md
temp/: M0-Walking-Skeleton-code-review.md
tests/: test_agent_loop.py  test_dgm.py  test_dgm_auto.py  test_dgm_promote.py  test_eval.py  test_eval_gate.py  test_sandbox.py  test_streaming.py  test_terminate.py
测试输出/: 阿里巴巴股价_2026-06-11.md
评测/2026-6-11-01/: agent-loop-basic-eval-plan.md  agent-loop-basic-eval-report.md  latest-summary.json  latest-summary.md  run_basic_eval.py
评测/2026-6-11-02/: regression-eval-report.md  run_regression_eval.py
评测/2026-6-12-01/: latest-summary.json  latest-summary.md  m4-regression-eval-plan.md  pytest-output.txt  (+5 more)
评测/2026-6-12-01/dgm-smoke/archive/candidates/m4-regression-smoke/workspace/: README.md  pyproject.toml
评测/2026-6-12-01/dgm-smoke/archive/candidates/m4-regression-smoke/workspace/docs/: Python复刻Pi-Roadmap-v1.md
评测/2026-6-12-01/dgm-smoke/archive/candidates/m4-regression-smoke/workspace/mu/: codeact.py  eval.py  extension.py  prompts.py  session.py
评测/2026-6-12-01/dgm-smoke/archive/candidates/m4-regression-smoke/workspace/plan/: M1-Harness-Core-plan.md
评测/2026-6-12-01/dgm-smoke/archive/candidates/m4-regression-smoke/workspace/tests/: test_eval.py
(+455 files in other folders)
