[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mu"
version = "0.1.0"
description = "μ (mu) — a minimal, Pi-style async coding agent (M4.0 eval + DGM-lite foundation)"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
]

[project.optional-dependencies]
tui = [
    "textual>=0.80",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mu = "mu.cli:main"

[tool.setuptools.packages.find]
include = ["mu*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
